--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	padding: 25px;
+	/* padding: 25px; */
 	margin: 0;
 	display: flex;
 	align-items: center;
@@ -11,12 +11,20 @@ body {
 
 canvas {
 	margin: 0 auto;
-	min-width: 600px;
-	border-radius: 10px;
 }
 
 .help {
+	height: 100vh;
 	width: 100%;
 	padding: 0 50px;
 	text-align: center;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+::-webkit-scrollbar {
+	width: 0px; /* remove scrollbar space */
+	background: transparent; /* optional: just make scrollbar invisible */
 }
